--- a/WiredBrainCoffee.UI/Components/CustomerContact.razor
+++ b/WiredBrainCoffee.UI/Components/CustomerContact.razor
@@ -33,6 +33,8 @@
     <button type="submit" class="btn btn-info float-end">Submit</button>
 </EditForm>
 
+<NavigationLock OnBeforeInternalNavigation="ConfirmNav" ConfirmExternalNavigation></NavigationLock>
+
 @code {
     public Contact Contact = new Contact();
 
@@ -41,4 +43,20 @@
         await ContactService.PostContact(Contact);
         NavManager.NavigateTo("contact-confirmation");
     }
+
+    async Task ConfirmNav(LocationChangingContext context)
+    {
+        bool isEditing = Contact.GetType().GetProperties().Any(p => !string.IsNullOrEmpty(p.GetValue(Contact).ToString()));
+
+        if (!isEditing)
+        {
+            var confirm = await JSRun.InvokeAsync<bool>("window.confirm", "Are you sure you want to leave?");
+
+            if (!confirm)
+            {
+                
+            }
+        }
+    }
+
 }
