--- a/WiredBrainCoffee.UI/Components/CustomerContact.razor
+++ b/WiredBrainCoffee.UI/Components/CustomerContact.razor
@@ -54,7 +54,7 @@
 
             if (!confirm)
             {
-                
+                context.PreventNavigation();
             }
         }
     }
